# Project_Manager

./: PRD.docx  README.md
app/: .env  docker-compose.yaml
app/api/: Cargo.toml  Dockerfile.dev  README.Docker.md
app/api/src/: main.rs
app/client/: Cargo.toml  Dockerfile.dev
app/data/redis/: dump.rdb
app/nginx/: default.conf
