[package]
name = "it_project_manager_client"
version = "0.1.0"
edition = "2021"
description = "IT Project Management Client"
readme = "README.md"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }